# QR-Code-Reader

./: main.py  pyproject.toml
